--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Frontend</title>
@@ -7,7 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body class="relative w-full max-w-full min-h-screen">
-  <app-root class="flex flex-col min-h-screen"></app-root>
+  <app-root class="flex flex-col min-h-screen px-3 md:px-10"></app-root>
 </body>
+
 </html>
