--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>UpTask | Administrador de tareas</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/image/icon-header.svg">
 </head>
 
 <body class="relative w-full max-w-full min-h-screen">
